# The-backend-of-What-to-Eat-Today

./: .envrc  .gitignore  pyproject.toml  requirements.txt  run.py  sample.xlsx
.github/workflows/: dev_0nlinetek-eat.yml
apps/: background.py  database.py  models.py
src/: canteen.py  carousel.py  comments.py  dish.py  feedback.py  main.py  marks.py  new.py  sdu_sso.py  users.py
src/dish/: main.py
src/obj_storage/: __init__.py  client.py  router.py
src/sql_app/: __init__.py  models.py  schemas.py
src/sql_app/crud/: canteen.py  carousel.py  comment.py  dishes.py  feedback.py  marks.py  new_dish.py  user.py
