[project]
name = "The-backend-of-What-to-Eat-Today"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "0nlineTek Web XLS", email = "xls-0nlinetek@hotmail.com"},
]
dependencies = [
    "fastapi[all]>=0.112.0",
    "sqlalchemy>=2.0.32",
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.9.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Non-oss"}


[tool.pdm]
distribution = false
